# molecular-renderer

./: .gitattributes  .gitignore  LICENSE  Package.resolved  Package.swift  README.md  compile-dxc-wrapper.sh  install-libraries.bat  install-libraries.sh  install-libs.bat  install-openmm.bat  install-openmm.sh  install-xtb.bat  install-xtb.sh  requirements.txt  run-test.ps1  run-tests-ordered.bat  run-tests-ordered.ps1  run-tests.bat  run.bat  run.sh
Documentation/: DFT.md  Goals.md  HDL.md  KnownIssues.md  MRSimulation.md  MRSimulationDecoder.swift  Modules.md  Overview.md  References.md  Simulators.md  bvh-update-process.md  macos-instructions.md  other-documentation.md  render-process.md  renderer-window.md  tests-and-tutorials.md  tests.md  user-interface.md  windows-instructions.md
Documentation/GPT-4/: AmbientOcclusion.swift
Documentation/Scripts/: MRSimulationDecoder.py  MRSimulationDecoder.rs  MRSimulationDecoder.swift
Documentation/Tests/: MM4.swift  (+15 more)
GPT-4/: how-to-create-the-ao-sampler.md  how-to-create-the-ui.md
MolecularRenderer/: AtomStatistics.metal  AtomStatistics.swift  CheckFrameRate.metal  ContentView.swift  EventTracker.swift  ExampleMolecules.swift  Geometry.swift  Kernels.metal  MolecularRendererApp.swift  RayTracing.metal  RenderMain.metal  Renderer.swift
MolecularRenderer.xcodeproj/: project.pbxproj
Sources/HardwareCatalog/Serialization/SimulationImport/: Cargo.toml  README.md
Sources/HardwareCatalog/Serialization/SimulationImport/src/: lib.rs  mrsim_txt.rs
Sources/HardwareCatalog/Serialization/SimulationImport/tests/: mrsim_txt.rs
(+926 files in other folders)
