[package]
name = "simulation-import"
authors = [
    "Philip Turner <philipturner.ar@gmail.com>",
    "Alexey Novikov <former.token@gmail.com>",
]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2"
lazy_static = "1.4"
num_cpus = "1.16.0"
rand = "0.8"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"